# multiple-time-same-lib-different-abi-hash

./: .gitignore
.tipi/: id
commonLib/: CMakeLists.txt  commonlib.cpp  commonlib.hpp  testexec.cpp
commonLib/.tipi/: deps  id
libA/.tipi/: deps  id  opts
libB/.tipi/: deps  id  opts
main_project/: ahahah.cpp
main_project/.tipi/: deps  id  opts
